--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -1,22 +1,22 @@
 {
   "publisher": "luckyra8od",
-  "name": "hoverlens",
-  "displayName": "HoverLens",
-  "version": "1.1.0",
+  "name": "hoverexplain",
+  "displayName": "HoverExplain",
+  "version": "1.2.0",
   "description": "Instant code understanding, right under your cursor.",
   "license": "MIT",
   "galleryBanner": {
     "color": "#09090b",
     "theme": "dark"
   },
-  "homepage": "https://github.com/lra8dev/hoverlens/blob/main/apps/extension/README.md",
+  "homepage": "https://github.com/lra8dev/hoverexplain/blob/main/apps/extension/README.md",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lra8dev/hoverlens.git",
+    "url": "https://github.com/lra8dev/hoverexplain.git",
     "directory": "apps/extension"
   },
   "bugs": {
-    "url": "https://github.com/lra8dev/hoverlens/issues"
+    "url": "https://github.com/lra8dev/hoverexplain/issues"
   },
   "keywords": [
     "ai",
@@ -58,14 +58,14 @@
   ],
   "contributes": {
     "commands": [
-      { "command": "hoverlens.signin", "title": "HoverLens: Sign In" },
-      { "command": "hoverlens.signout", "title": "HoverLens: Sign Out" },
-      { "command": "hoverlens.toggle", "title": "HoverLens: Toggle On/Off" }
+      { "command": "hoverexplain.signin", "title": "HoverExplain: Sign In" },
+      { "command": "hoverexplain.signout", "title": "HoverExplain: Sign Out" },
+      { "command": "hoverexplain.toggle", "title": "HoverExplain: Toggle On/Off" }
     ],
     "configuration": {
-      "title": "HoverLens",
+      "title": "HoverExplain",
       "properties": {
-        "hoverlens.debounceTime": {
+        "hoverexplain.debounceTime": {
           "type": "number",
           "default": 600,
           "description": "Delay in milliseconds before triggering a hover explanation.",
@@ -77,6 +77,7 @@
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
+    "package:vsce": "pnpm dlx @vscode/vsce package --no-dependencies",
     "compile": "pnpm run check:types && pnpm run lint && node esbuild.js",
     "watch": "node esbuild.js --watch",
     "typecheck:watch": "tsc -watch -p ./",
@@ -86,10 +87,10 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@hoverlens/validators": "workspace:*"
+    "@hoverexplain/validators": "workspace:*"
   },
   "devDependencies": {
-    "@hoverlens/eslint-config": "workspace:*",
+    "@hoverexplain/eslint-config": "workspace:*",
     "@types/node": "catalog:types",
     "@types/vscode": "^1.108.1",
     "esbuild": "catalog:tooling",
