--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hoverlens/root",
-  "version": "1.1.0",
+  "name": "@hoverexplain/root",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
     "dev": "pnpm -r --parallel dev",
@@ -30,11 +30,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/lra8dev/hoverlens"
+    "url": "https://github.com/lra8dev/hoverexplain"
   },
   "packageManager": "pnpm@10.28.1",
   "devDependencies": {
-    "@hoverlens/eslint-config": "workspace:*",
+    "@hoverexplain/eslint-config": "workspace:*",
     "typescript": "catalog:core",
     "husky": "catalog:tooling",
     "eslint": "catalog:tooling"
