--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hoverlens/eslint-config",
-  "version": "1.1.0",
+  "name": "@hoverexplain/eslint-config",
+  "version": "1.2.0",
   "type": "module",
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
