--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hoverlens/validators",
-  "version": "1.1.0",
+  "name": "@hoverexplain/validators",
+  "version": "1.2.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -13,7 +13,7 @@
     "zod": "catalog:core"
   },
   "devDependencies": {
-    "@hoverlens/eslint-config": "workspace:*",
+    "@hoverexplain/eslint-config": "workspace:*",
     "eslint": "catalog:tooling"
   }
 }
